AN-105: Fix barcode height (50 is too high!)

--- a/als/lims/browser/stickers/ALS.css
+++ b/als/lims/browser/stickers/ALS.css
@@ -28,7 +28,6 @@
 }
 .barcode object {
     width: 42mm !important;
-    height: 7mm !important;
 }
 
 .sticker table {
